adding a test file to the new branch to test html table to JSON conversion

--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Table</title>
 </head>
-<body>
+<body onload="convertData()">
     <table class="wikitable sortable collapsible striped jquery-tablesorter" id="collapsibleTable0">
         <thead><tr>
         <th class="unsortable"><span class="collapseButton">[<a id="collapseButton0" href="javascript:collapseTable(0);">hide</a>]</span></th>
